# Memo

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
core/: Cargo.toml
core/src/: clock.rs  config.rs  conflict.rs  error.rs  folder.rs  fsio.rs  id.rs  lib.rs  list.rs  note.rs  notebook.rs  notefolder.rs  recurrence.rs  relpath.rs  rollover.rs  state.rs  task.rs  watcher.rs  workspace.rs
core/tests/: business_rules.rs  invariants.rs  migration.rs  notebook.rs  notes.rs  parse_and_render.rs  rich_format.rs  watcher.rs  workspace_discovery.rs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  prefs.rs  state.rs
src-tauri/tests/: bridge.rs
src/lib/: CompletedView.svelte  Editor.svelte  EditorStub.svelte  HomeView.svelte  Icon.svelte  ListView.svelte  NoteEditor.svelte  NotesWidget.svelte  PageHeader.svelte  PeriodView.svelte  SettingsView.svelte  TabBar.svelte  TaskInspector.svelte  TaskRow.svelte  TasksView.svelte  TasksWidget.svelte  TitleBar.svelte  UnsupportedWidget.svelte  WorkspaceView.svelte  api.js  dates.js  icons.js  markdown.js  markdown.test.js  names.js  paths.js  screens.test.js  strings.js  tabs.js  tabs.test.js  taskId.js  widgets.js
src/styles/: tokens.css
