[workspace]
members = ["core", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.13.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
thiserror = "1.0"
