[package]
name = "memo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Business logic for Memo. Pure Rust: no Tauri dependency allowed here."

[dev-dependencies]
tempfile = "3.14"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
notify.workspace = true
thiserror.workspace = true
trash = "=5.2.6"
