[package]
name = "memo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memo — local-first tasks and notes"
default-run = "memo"

[lib]
name = "memo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
memo-core = { path = "../core" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
